# link-holder

./: .env.json  .gitignore  .pre-commit-config.yaml  .pre-commit.yml  CHANGELOG.md  __main__.py  pyproject.toml
bot/: __init__.py  core.py  handlers.py
core/config/: default.py
core/config/providers/: bot.py
core/config/providers/bot_platforms/: __init__.py  telegram.py
